{{$NEXT}}
  - Add set_nph method and support NPH response mode

0.002     2021-04-19 03:59:16 EDT
  - Remove header_names method
  - Throw an exception if render is called with an unknown type

0.001     2021-04-19 00:43:20 EDT
  - First release