@@ -383,6 +383,18 @@ Retrieve the value of a request header by name (case insensitive). CGI request
 headers can only contain a single value, which may be combined from multiple
 values.
 
+=head3 cookies
+
+  my $hashref = $cgi->cookies;
+
+Hash reference of request cookie names and values.
+
+=head3 cookie
+
+  my $value = $cgi->cookie('foo');
+
+Retrieve the value of a request cookie by name.
+
 =head3 body
 
   my $bytes = $cgi->body;
